# seminary-management-system

./: .gitignore  README.md  app.py  app.ui  dashboard.py  dashboard.ui  form.ui  mainwindow.py  pyproject.toml  requirements.txt  session_manager.py  student.py  students_data.json
